changes to Coulomb section
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11358 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -177,6 +177,16 @@
 	\REVIEW{J.~Phys.}{G42}{2015}{2, 025003}
 	%doi = http://dx.doi.org/10.1088/0954-3899/42/2/025003
 
+\bibitem{fagundes11}
+	\Name{D. A. Fagundes, E. G. S. Luna, M. J. Menon, A. A. Natale}
+	LISHEP 2011, Worshop on LHC -- Present and Future, Rio de Janeiro, RJ, July 05-10, 2011, Brazil
+
+\bibitem{block12}
+	% Forward hadronic scattering at 8 TeV: Predictions for the LHC
+	\Name{Martin M. Block and Francis Halzen}
+	\REVIEW{Phys.~Rev.~D}{86}{2012}{014006}
+	
+
 
 % TODO: remove unnecessary references
 
