--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -8,6 +8,7 @@
 
 \> CNI analysis summary
 \>> $N_b=1$, constant phase: excluded
+\>>> SWY formula excluded, too
 \>> $N_b=1$, peripheral phase: can fit data, but doubtful from other perspectives
 \>> $N_b=3$, both constant and peripheral phase: good description of data $\Rightarrow$ centrality is not a necessity
 \>> summary on presented $\rho$ values?
