--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -15,7 +15,7 @@ insertions that approach the LHC beam very closely to detect protons with
 scattering angles of only a few $\mu$rad. 
 The RPs are organised in two stations: one on the left side of the IP 
 (LHC sector 45) and one on the right (LHC sector 56).
-Each RP station, located between 215 and 220\,m from the IP, is composed of two 
+Each RP station, located between 214 and 220\,m from the IP, is composed of two 
 units: ``near'' (214\,m from the IP) and ``far'' (220\,m). 
 A unit consists of 3 RPs, two
 approaching the outgoing beam vertically and one horizontally.
@@ -24,8 +24,7 @@ strip detectors designed with the specific objective of
 reducing the insensitive area at the edge facing the beam
 to only a few tens of micrometers. The 5\,m long lever arm 
 between the near and the far RP units has two important
-advantages: the local track angles in the x and y projections
-perpendicular to the beam direction can be reconstructed
+advantages: the local track angles can be reconstructed
 with a precision of about $10\,\mu$rad, and a high trigger efficiency
 ($> 99$\%) can be achieved as the proton trigger selection
 uses all RPs independently. Since elastic scattering events consist of two anti-parallel protons, the detected events can have two topologies, called diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
