--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -1,9 +1,9 @@
-\section{Data taking}
+\section{Data Taking}
 \label{sec:data taking}
 
 The results reported here are based on data taken in October 2012 
 in a dedicated LHC proton fill (3216)
-with very special beam properties. 
+with the very special beam properties described in the previous section.
 
 The vertical RP approach to only $3\,\sigma_{y}$ from the beam centre required
 low beam currents -- two colliding bunch pairs and in each beam one 
@@ -31,11 +31,10 @@ between the cleaning operations.
 Due to an anti-collision protection system the top and the bottom pots of a 
 vertical RP unit could not approach each other close enough to be both at a 
 distance of $3\,\sigma_{y} = 780\,\mu$m from the beam centre. Therefore a 
-configuration with one RP diagonal (top pots left of IP5 -- bottom pots right
-of IP5) at $3\,\sigma_{y}$ and the other (bottom left -- top right) at 
+configuration with one RP diagonal (45 top -- 56 bottom) at $3\,\sigma_{y}$ and the other (45 bottom -- 56 top) at 
 $10\,\sigma_{y}$ was chosen. The far diagonal provides a systematic comparison
 at larger $|t|$-values.
-The horizontal RPs were less critical for this measurement and placed at a
+The horizontal RPs were only needed for the alignment and therefore placed at a
 safe distance of $10\,\sigma_{x} \approx 7.5$\,mm.
 
 The collected events were triggered by a logical \textit{OR} of: inelastic 
